Fixed dropdown z-index

--- a/src/assets/scss/components/global/dropdown/dropdown.scss
+++ b/src/assets/scss/components/global/dropdown/dropdown.scss
@@ -13,6 +13,7 @@
   position: absolute;
   top: 100%;
   right: 0;
+  z-index: 100;
 
   padding-top: 10px;
   padding-bottom: 10px;
